--- a/campaign/templates/app/campaign/options.html
+++ b/campaign/templates/app/campaign/options.html
@@ -106,9 +106,9 @@
                                 style="overflow-y: auto;overflow-x: none;max-width: calc(100% - 2px);"></ul>
                         </div>
 
-                        <button type="button" class="text-sm text-primary font-semibold hover:underline" onclick="connectNewAccount()">
+                        <!-- <button type="button" class="text-sm text-primary font-semibold hover:underline" onclick="connectNewAccount()">
                             Connect new email account
-                        </button>
+                        </button> -->
                     </div>
                 </div>
                 <!-- Card: Stop sending emails -->
